# restaurant-backend

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  dev.sh  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
api/dependencies/: auth.py  category.py  client.py  delivery.py  dish.py  order.py  schedule.py  statistics.py  user.py
api/routers/: __init__.py  auth.py  category.py  client.py  delivery.py  dish.py  order.py  schedule.py  user.py
api/routers/admin/: __init__.py  auth.py  category.py  client.py  delivery.py  dish.py  image.py  order.py  schedule.py  statistics.py  user.py
constants/: category.py  datetime.py  delivery.py  order.py  schedule.py
db/: sessions.py
db/alembic/: env.py
db/alembic/versions/: 091be85ae7f5_add_new_order_statuses.py  1af2e19e995d_fix_enums.py  1c2d1c96c41c_add_order_and_order_dish_tables.py  1ffaaa63f1f7_update_user_table.py  247b1ec19c9f_replace_user_with_profile_and_item_.py  27f549497d07_add_new_user_parent_id.py  33d4b6d0f75b_add_commentas.py  440b14447296_add_new_user_statuses.py  62ce90a1b5b6_add_new_models.py  7c33395edb8f_fix_telegram_id_type.py  868ceb60a129_rename_profile_to_client.py  93cf1ce6eaa0_add_delivery.py  a663bd56084b_add_telegram_data.py  b14635476a40_add_timezone.py  c1daef174541_add_order_status_table.py  d5b5bb11f4ac_update_typing.py
db/models/: __init__.py  category.py  client.py  delivery.py  dish.py  order.py  order_dish.py  order_status.py  schedule.py  user.py
enums/: auth.py  currency.py  date.py  order.py  redis.py  role.py  statistics.py
exceptions/: __init__.py  base.py
helpers/: order.py  pubsub.py
repositories/: __init__.py  base.py  category.py  client.py  delivery.py  dish.py  order.py  order_dish.py  order_status.py  schedule.py  statistics.py  user.py
schemas/: __init__.py  auth.py  category.py  client.py  delivery.py  dish.py  order.py  order_status.py  schedule.py  user.py
schemas/admin/: __init__.py  auth.py  category.py  delivery.py  dish.py  image.py  order.py  schedule.py  statistics.py  user.py
settings/: __init__.py  auth.py  chroma.py  db.py  postgres.py  prefect.py  redis.py  smtp.py
tests/: conftest.py
tests/factories/: __init__.py  base.py  category.py  client.py  delivery.py  dish.py  order.py  order_dish.py  order_status.py  schedule.py  user.py
tests/test_api/: base.py  test_auth.py  test_category.py  test_client.py  test_delivery.py  test_dish.py  test_order.py  test_schedule.py  test_user.py
tests/test_api/test_admin/: test_auth.py  test_category.py  test_client.py  test_delivery.py  test_dish.py  test_image.py  test_order.py  test_schedule.py  test_statistics.py  test_user.py
usecases/: __init__.py  auth.py  category.py  client.py  delivery.py  dish.py  order.py  schedule.py  statistics.py  user.py
utils/: category.py  delivery.py  json_encoder.py  redis.py  schedule.py
